# SolMeta

./: README.md  pyproject.toml  requirements.txt  solmeta.py
