[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solmeta"
version = "1.0.0"
description = "Extract Solidity smart contract metadata from bytecode, including CBOR metadata and IPFS-based source information"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "v4resk", email = "noreply@github.com"}
]
keywords = ["solidity", "ethereum", "smart-contracts", "metadata", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

dependencies = [
    "web3>=6.0.0,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "cbor2>=5.4.6,<6.0.0",
    "base58>=2.1.1,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/v4resk/SolMeta"
Repository = "https://github.com/v4resk/SolMeta"
Issues = "https://github.com/v4resk/SolMeta/issues"

[project.scripts]
solmeta = "solmeta:main"

[tool.setuptools]
py-modules = ["solmeta"]
